[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/QuestUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.901961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color(0.290196, 0.290196, 0.290196, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color(0.45098, 0.45098, 0.45098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="QuestUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400
margin_top = -250
margin_right = 400
margin_bottom = 250
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100
margin_top = 10
margin_right = 100
margin_bottom = 30
text = "Quests"
align = 1
valign = 1

[node name="QuestList" type="ItemList" parent="Background"]
anchor_right = 0.3
anchor_bottom = 0.45
margin_left = 20
margin_top = 40
margin_right = -10
margin_bottom = -10
custom_styles/bg = SubResource( 2 )

[node name="QuestListLabel" type="Label" parent="Background/QuestList"]
anchor_right = 1.0
margin_top = -20
margin_bottom = -5
text = "Available Quests"
align = 1

[node name="ActiveQuests" type="ItemList" parent="Background"]
anchor_right = 0.3
anchor_top = 0.45
anchor_bottom = 0.9
margin_left = 20
margin_top = 10
margin_right = -10
margin_bottom = -10
custom_styles/bg = SubResource( 2 )

[node name="ActiveQuestsLabel" type="Label" parent="Background/ActiveQuests"]
anchor_right = 1.0
margin_top = -20
margin_bottom = -5
text = "Active Quests"
align = 1

[node name="QuestInfo" type="Panel" parent="Background"]
anchor_left = 0.35
anchor_right = 1.0
anchor_bottom = 0.9
margin_left = 10
margin_top = 40
margin_right = -20
margin_bottom = -10
custom_styles/panel = SubResource( 3 )

[node name="Title" type="Label" parent="Background/QuestInfo"]
anchor_right = 1.0
margin_left = 10
margin_top = 10
margin_right = -10
margin_bottom = 30
text = "Quest Title"
align = 1

[node name="Description" type="Label" parent="Background/QuestInfo"]
anchor_right = 1.0
margin_left = 10
margin_top = 40
margin_right = -10
margin_bottom = 90
text = "Quest description goes here..."
autowrap = true

[node name="Objectives" type="Label" parent="Background/QuestInfo"]
anchor_right = 1.0
margin_left = 10
margin_top = 100
margin_right = -10
margin_bottom = 200
text = "Objectives:"
autowrap = true

[node name="Rewards" type="Label" parent="Background/QuestInfo"]
anchor_right = 1.0
margin_left = 10
margin_top = 210
margin_right = -10
margin_bottom = 310
text = "Rewards:"
autowrap = true

[node name="AcceptButton" type="Button" parent="Background/QuestInfo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50
margin_top = -40
margin_right = 50
margin_bottom = -10
custom_styles/normal = SubResource( 4 )
text = "Accept Quest"
disabled = true

[node name="CloseButton" type="Button" parent="Background"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -30
margin_top = 10
margin_right = -10
margin_bottom = 30
text = "X"

[connection signal="item_selected" from="Background/QuestList" to="." method="_on_quest_list_item_selected"]
[connection signal="item_selected" from="Background/ActiveQuests" to="." method="_on_active_quests_item_selected"]
[connection signal="pressed" from="Background/QuestInfo/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="Background/CloseButton" to="." method="_on_close_button_pressed"]